Active_pseudo_class_selector

--- a/Active_pseudo_class_selector.html
+++ b/Active_pseudo_class_selector.html
@@ -3,7 +3,7 @@
 <head>
     <title>Active_pseudo_class_selector</title>
     <style>
-        input:focus{
+        a:active{
             color:red;
             font-size: 20px;
         }
