only_child_psuedo_class_selector

--- a/only_child_psuedo_class_selector.html
+++ b/only_child_psuedo_class_selector.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <!--Hey this is applicable to only first child in the body -->
+    <!--The :only-child selector applies styles to an element only if it is the only child of its parent. If the parent has more than one child, it will not apply. -->
     <p>Hey this is Ganesha</p>
     
     
